--- a/nonononotifications/app/src/main/res/layout/layout_home_list_view.xml
+++ b/nonononotifications/app/src/main/res/layout/layout_home_list_view.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="90sp"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
@@ -21,7 +21,7 @@
 
     <TextView
         android:id="@+id/snarky_comment"
-        android:layout_width="wrap_content"
+        android:layout_width="290dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
